--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -59,6 +59,9 @@ jobs:
           name: nuget
           path: ${{ env.NuGetDirectory }}
 
+      - name: Install linux libraries gwenhywfar and aqbanking
+        run: sudo apt install -y libgwenhywfar-core-dev libaqbanking-dev
+
       - name: Install nuget validator
         run: dotnet tool update Meziantou.Framework.NuGetPackageValidation.Tool --global
 
@@ -75,6 +78,8 @@ jobs:
     - uses: actions/checkout@v3
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
+    - name: Install linux libraries gwenhywfar and aqbanking
+      run: sudo apt install -y libgwenhywfar-core-dev libaqbanking-dev
     - name: Run tests
       run: dotnet test --configuration Release
 
