improve metadata and documentation

--- a/src/AqBanking/AqBanking.csproj
+++ b/src/AqBanking/AqBanking.csproj
@@ -15,7 +15,7 @@
     <PackageTags>finance, banking, library</PackageTags>
     <PackageIcon>icon.png</PackageIcon>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <GenerateDocumentationFile>True</GenerateDocumentationFile>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <!-- If all members are not documented, you can disable the compiler warnings -->
     <NoWarn>$(NoWarn);CS1591</NoWarn>
     <IncludeSymbols>true</IncludeSymbols>
