--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -48,7 +48,7 @@ jobs:
         name: nuget
         if-no-files-found: error
         retention-days: 7
-        path: ${{ env.NuGetDirectory }}/*.(s)nupkg
+        path: ${{ env.NuGetDirectory }}/
 
   validate_nuget:
     runs-on: ubuntu-latest
